--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,10 @@
             <version>${mapstruct.version}</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
 
     </dependencies>
